<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/onboarding"
        tools:context=".ui.main.view.fragment.login.ForgetPasswordFragment">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="none"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/btn_back"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/imgLogo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_56dp"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/ic_logo" />

                <plm.patientslikeme2.utils.usercontrol.UserTextView
                    style="@style/TextView24"
                    android:layout_marginTop="@dimen/_16dp"
                    android:gravity="center"
                    android:text="@string/reset_password" />

                <plm.patientslikeme2.utils.usercontrol.UserTextView
                    style="@style/TextView16"
                    android:layout_marginHorizontal="@dimen/_30dp"
                    android:layout_marginTop="@dimen/_20dp"
                    android:text="@string/reset_password_details"
                    android:textSize="@dimen/_15sp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/imgLogo" />

                <plm.patientslikeme2.utils.usercontrol.UserTextView
                    android:id="@+id/tv_confirm_password"
                    style="@style/TextView16"
                    android:layout_marginHorizontal="@dimen/_30dp"
                    android:layout_marginTop="@dimen/_20dp"
                    android:text="@string/email"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/et_new_password" />

                <plm.patientslikeme2.utils.usercontrol.UserEditText
                    android:id="@+id/et_email"
                    style="@style/EditText"
                    android:layout_height="@dimen/_42dp"
                    android:layout_marginHorizontal="@dimen/_20dp"
                    android:layout_marginTop="@dimen/_4dp"
                    android:imeOptions="actionDone"
                    android:inputType="textEmailAddress" />

                <LinearLayout
                    android:id="@+id/ll_error"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_28dp"
                    android:layout_marginTop="@dimen/_10dp"
                    android:orientation="horizontal"
                    android:visibility="gone">

                    <ImageView
                        android:id="@+id/iv_error"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@null"
                        android:src="@drawable/ic_error_24" />

                    <plm.patientslikeme2.utils.usercontrol.UserTextView
                        android:id="@+id/tv_email_error"
                        style="@style/TextView14"
                        android:layout_gravity="center|start"
                        android:layout_marginStart="@dimen/_2dp"
                        android:gravity="center|start"
                        android:linksClickable="true"
                        android:textColorLink="@color/blue_darker"
                        android:paddingTop="@dimen/_2dp"
                        android:text="@string/error_please_enter_your_email"
                        android:textColor="@color/red_error" />
                </LinearLayout>

                <plm.patientslikeme2.utils.usercontrol.UserButton
                    android:id="@+id/btn_submit"
                    style="@style/ButtonDarkGreen"
                    android:layout_width="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_20dp"
                    android:text="@string/submit" />

            </LinearLayout>
        </androidx.core.widget.NestedScrollView>

        <plm.patientslikeme2.utils.usercontrol.UserButton
            android:id="@+id/btn_back"
            style="@style/ButtonDarkGreenBorder"
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/_30dp"
            android:text="@string/back"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>