...
            android:id="@+id/tv_current_email_id"
            style="@style/TextView16"
            android:layout_marginHorizontal="@dimen/_8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_current_email"
            tools:text="sambhaji.k@westagilelabs.com" />

        <View
            android:id="@+id/divider_line_1"
            style="@style/DotLineView"
            android:layout_marginVertical="@dimen/_24dp"
            app:layout_constraintLeft_toLeftOf="parent"
...
